--- a/sub/apiTest/views/layouts/main.handlebars
+++ b/sub/apiTest/views/layouts/main.handlebars
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>My Practice Page</title>
-	<link rel="stylesheet" href="/css/style.css" type="text/css">
+	<script type="text/javascript" src="/css/style.css"></script>
+	
 </head>
 <body>
 	{{{body}}}
-	
+	<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 </body>
 </html>
