--- a/sub/apiTest/views/home.handlebars
+++ b/sub/apiTest/views/home.handlebars
@@ -1,2 +1,6 @@
-<h1>Response from login is :</h1>
-<pre>{{login}}</pre>
+<h1>Response from Foursquare :</h1>
+<pre class="prettyprint">
+<code class="prettyprint">
+{{results}}
+</code>
+</pre>
