added additional views for site like getting started, user-history, venues-search, and venues

--- a/sub/test/views/venues-search.handlebars
+++ b/sub/test/views/venues-search.handlebars
@@ -1,6 +1,11 @@
-<h1>Venues - Search</h1>
+<div class="page-header">
+  <h1>Venues - Search <small>Subtext for header</small></h1>
+</div>
+</div>
 
-<p>Let's get a list of recommended venues near the specified location</p>
+
+
+<p>Let's get a list of recommended venues near a specified location</p>
 
 <h3>Radius</h3>
 
@@ -14,7 +19,9 @@
 
 
 
-<h3>Query</h3>
+<h3>Javascript to make this call:</h3>
+
+
 
 <h3>Response from Foursquare:</h3>
 <pre class="prettyprint">
