--- a/sub/test/views/getting-started.handlebars
+++ b/sub/test/views/getting-started.handlebars
@@ -1,6 +1,11 @@
 <div class="page-header">
-	<h1>Getting Started with Yelp's API and Node</h1>
+  <h1>Getting Started<small>Foursquare API with Node</small></h1>
+</div>
 </div>
 <p></p>
 
 <img src="kites.jpg" class="img-responsive" alt="Flying Kites">
+
+
+<h2>Calls</h2>
+<h2>JSON</h2>
