--- a/sub/test/views/layouts/main.handlebars
+++ b/sub/test/views/layouts/main.handlebars
@@ -4,10 +4,8 @@
 	<meta charset="utf-8">
 	<title>My Practice Page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<!-- Optional Bootstrap theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
 	
+	<link rel="stylesheet" href="css/lavish-bootstrap.css">
 </head>
 <body>
 	<!-- Add navigation -->
@@ -21,14 +19,30 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">NAME</a>
+				<a class="navbar-brand" href="#">Name</a>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="navbarCollapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="/" target="_blank">Home</a></li>
-					<li><a href="/getting-started" target="_blank">Getting Started</a></li>
-					<li><a href="/authentication" target="_blank">Authentication</a></li>
+					<li class="active"><a href="/" >Home</a></li>
+					<li><a href="/getting-started" >Getting Started</a></li>
+					<li class="dropdown">
+					<a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">User <b class="caret"></b></a>
+                      <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="/user-badges">Badges</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="/user-friends">Friends</a></li>
+                        </ul>
+                        </li>
+                        <li class="dropdown">
+                      <a href="/venues" id="drop2" role="button" class="dropdown-toggle" data-toggle="dropdown">Venues <b class="caret"></b></a>
+                      <ul class="dropdown-menu" role="menu" aria-labelledby="drop2">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="venues-explore">Explore</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="venues-search">Search</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="venues-trending">Trending</a></li>                  
+                      </ul>
+                    </li>
+					<li><a href="/checkins" >Checkins</a></li>
+					<li><a href="/tips" >Tips</a></li>
 				</ul>
 			</div>
 		</div>
