Added more content to index

--- a/sub/test/views/index.handlebars
+++ b/sub/test/views/index.handlebars
@@ -1,2 +1,14 @@
-<h1>How-To for Foursquare's API and Node</h1>
-<h2>by Carol D. Toro</h2>
+<div class="container">
+	<div class="jumbotron">
+		<h1>Foursquare API</h1>
+		<p>Access Data from the Foursquare API with Node</p>
+	</div>
+
+	<div class="page-header">
+		<h1>A How To Guide for the Foursquare API <br>
+			<small>Carol D. Toro</small></h1>
+		</div>
+
+	<div class="content">
+		<p>While the Foursquare API can be used for searching places, connecting with users, knowing when a user has checked in on Foursquare, and even accessing every check-in around the world, this guide will focus primarily on searching venues and getting user data.</p>
+	</div>
