--- a/sub/test/views/layouts/main.handlebars
+++ b/sub/test/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<link rel="stylesheet" href="css/lavish-bootstrap.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<!-- Add navigation -->
@@ -47,11 +48,8 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container">
-		<div class="jumbotron">
 			{{{body}}}
-		</div>
-	</div>
+	
 	<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
