--- a/sub/test/views/getting-started.handlebars
+++ b/sub/test/views/getting-started.handlebars
@@ -1,11 +1,48 @@
-<div class="page-header">
-  <h1>Getting Started<small>Foursquare API with Node</small></h1>
-</div>
-</div>
-<p></p>
+<div class="container">
+	<div class="jumbotron">
+		<h1>Foursquare API</h1>
+		<p>Let's get started</p>
+	</div>
+	<div class="content">
+		<p>Before we can start making calls to the API to get data, it's important to understand that</p>
+		<div class="page-header">
+			<h1>Setup API Access</h1>
+		</div>
 
-<img src="kites.jpg" class="img-responsive" alt="Flying Kites">
+		<div class="content">
+			<p>In order to gain access to the Foursquare API, you will need to have a Foursquare account, if you don’t have one, you can easily create a free account at <a href="http://foursquare.com">Foursquare.com</a>. After you login to your account, you will need to create an application on the Foursquare For Developers' <a href="https://foursquare.com/developers/apps">site</a>. The application </p>
 
+			{{!-- Image --}}
+			<img src="img/foursquare-app.png" class="img-fluid" alt="Responsive image">
 
-<h2>Calls</h2>
-<h2>JSON</h2>
+			<p>After you’ve created the application, Foursquare will provide you with the following credentials: Client ID and Client Secret. These credentials will allow you to make requests from the API.</p>
+
+			{{!-- Credentials image --}}
+			<img src="img/app-creds.png" class="img-fluid" alt="Responsive image">
+
+			<p>I recommend you store the credentials in a file, as you will be needing them each time you make a call to the API. A call to the API will look like this: </p>
+
+			<pre class="prettyprint">
+<code class="prettyprint">https://api.foursquare.com/v2/venues/search?ll=40.7,-74&client_id=CLIENT_ID&client_secret=CLIENT_SECRET&v=YYYYMMDD</code></pre>
+			<p>Every time you make a call, you will need to replace CLIENT_ID with your client id key, and replace CLIENT_SECRET with your client secret key. </p>
+
+			
+
+		</div>
+		<div class="page-header">
+			<h1>Setup Foursquare Node Module</h1>
+		</div>
+		<div class="content">
+			<p>Next we are going to install a node module that will make it easier for us to call the API using Node and Express. In order to install the Foursquare module, you will want to run the following command <code>npm install node-foursquare</code>. You will be able to find more information about the module on <a href="https://github.com/clintandrewhall/node-foursquare">GitHub</a>.</p>
+		
+			<p>While the GitHub readme has examples on how to use the module and store the API keys, as I mentioned before, I recommend you store the keys in a separate file instead of creating a variable config which stores the keys on the JavaScript page. This will ensure that your keys are kept safe should you decide to share your code. You can use the following code sample, where the file <code>config.js</code> stores the keys.</p>
+
+			<pre class="prettyprint linenums">
+var config = require('./config.js');
+var foursquare = require('node-foursquare')(config);
+			</pre>
+
+			<p>Now that we have set up the API access and the Node module, we are ready to start making calls.</p>
+		</div>
+
+	
