--- a/sub/test/views/layouts/main.handlebars
+++ b/sub/test/views/layouts/main.handlebars
@@ -26,7 +26,8 @@
 			<div class="collapse navbar-collapse" id="navbarCollapse">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="/" >Home</a></li>
-					<li><a href="/getting-started" >Getting Started</a></li>
+					<li><a href="/setup" >Setup</a></li>
+					<li><a href="/background">Background</a></li>
 					<li class="dropdown">
 					<a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">User <b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
