--- a/sub/test/views/layouts/main.handlebars
+++ b/sub/test/views/layouts/main.handlebars
@@ -28,6 +28,9 @@
 					<li class="active"><a href="/" >Home</a></li>
 					<li><a href="/setup" >Setup</a></li>
 					<li><a href="/background">Background</a></li>
+					<li><a href="/venues-explore">Explore Venues</a></li>
+					<li><a href="/venues-search">Search Venues</a></li>
+					<li><a href="/venues-search">Search Venues</a></li>
 					<li class="dropdown">
 					<a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">User <b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
@@ -55,4 +58,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
+ <footer class="footer">
+      <div class="container">
+        <p class="text-muted">How To Guide: Foursquare API</p>
+      </div>
+    </footer>
 </html>
