Edited main nav

--- a/sub/test/views/layouts/main.handlebars
+++ b/sub/test/views/layouts/main.handlebars
@@ -30,22 +30,8 @@
 					<li><a href="/background">Background</a></li>
 					<li><a href="/venues-explore">Explore Venues</a></li>
 					<li><a href="/venues-search">Search Venues</a></li>
-					<li><a href="/venues-search">Search Venues</a></li>
-					<li class="dropdown">
-					<a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">User <b class="caret"></b></a>
-                      <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="/user-badges">Badges</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="/user-friends">Friends</a></li>
-                        </ul>
-                        </li>
-                        <li class="dropdown">
-                      <a href="/venues" id="drop2" role="button" class="dropdown-toggle" data-toggle="dropdown">Venues <b class="caret"></b></a>
-                      <ul class="dropdown-menu" role="menu" aria-labelledby="drop2">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="venues-explore">Explore</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="venues-search">Search</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="venues-trending">Trending</a></li>                  
-                      </ul>
-                    </li>
+					<li><a href="/user-friends">User's Friends</a></li>
+					<li><a href="/user-history">User's History</a></li>
 					<li><a href="/checkins" >Checkins</a></li>
 					<li><a href="/tips" >Tips</a></li>
 				</ul>
