Edited main handlebar to include new navigation

--- a/sub/test/views/layouts/main.handlebars
+++ b/sub/test/views/layouts/main.handlebars
@@ -28,12 +28,11 @@
 					<li class="active"><a href="/" >Home</a></li>
 					<li><a href="/setup" >Setup</a></li>
 					<li><a href="/background">Background</a></li>
-					<li><a href="/venues-explore">Explore Venues</a></li>
-					<li><a href="/venues-search">Search Venues</a></li>
-					<li><a href="/user-friends">User's Friends</a></li>
-					<li><a href="/user-history">User's History</a></li>
-					<li><a href="/checkins" >Checkins</a></li>
-					<li><a href="/tips" >Tips</a></li>
+					<li><a href="/venues-explore">Explore</a></li>
+					<li><a href="/venues-search">Search</a></li>
+					<li><a href="/user-friends">Friends</a></li>
+					<li><a href="/user-history">History</a></li>
+					<li><a href="/user-tips" >Tips</a></li>
 				</ul>
 			</div>
 		</div>
