--- a/sub/test/views/user-friends.handlebars
+++ b/sub/test/views/user-friends.handlebars
@@ -9,77 +9,35 @@
         </div>
 
         <div class="content">
-            <p>I often use the explore feature on Foursquare when I'm interested in finding popular venues or would like recommendations on where to go for certain types of venues like coffee, shopping, arts, etc. This is a great feature if you’re visiting a location and want to know where the locals go.</p>
+            <p>Within the Swarm Foursquare app, I can navigate to the friends display, which shows a list of all of my friends in alphabetical order along with their profile photo. We can get a similar list by making a request to the Foursquare API. Since this a user authenticated type of call, we can only make the call with a USER ID as long as we have that’s user’s access token. Since we have authenticated ourselves, we can use our own user ID to pass to the call.</p>
 
             <p>If we were to make a direct call to the API without using the Node module, we would need to have our request directed to the following URL:</p>
             <pre class="prettyprint">
 <code class="prettyprint">https://api.foursquare.com/v2/users/USER_ID/friends</code></pre>
-            <p>We would also need to append all of our parameters to the URL which could get really long. After we make the call to the API, our JSON object will essentially be an array of venues near our current location and perhaps matching a search term.</p>
+            
+              <p>Some of the parameters this request takes are the following: USER_ID, and limit. For a complete list of parameters you can send with the request, please refer to the Foursquare documentation <a href="https://developer.foursquare.com/docs/users/friends">site</a>. For this call, I wont be using any parameters. But we will need to call the function with a userID</p>
 
-            <p>Some of the parameters this call takes are the following: radius, section, query, limit, novelty, and friend visits. For example, section takes any of the following options: drinks, coffee, food, arts, shops, outdoors, sights, trending, or specials. For a complete list of parameters you can send with the request, please refer to the Foursquare documentation <a href="https://developer.foursquare.com/docs/venues/explore">site</a>. </p>
-
-            <p>For this call, I wont be using any parameters. But we will need to call the function with a userID</p>
-
-<pre class="prettyprint">
-/*Build optional params*/
-  var params = {};
-  params.query = "donuts";
-  params.novelty = "new";</pre>
-
-    <p>Now that I have the parameters I want to use, I can call the API and give it the latitude, longitude, and name of location of interest, the parameters I build out, my access token, and call back function. Our call back function will take care of the response we receive from the API. Let's go ahead and make the call which will print out our JSON object into the console:</p>
+    <p>I can call the API with my USER_ID, pass null, since I wont be adding a limit parameter, pass it my access token, and a call back function. Our call back function will take care of the response we receive from the API and this time, instead of printing it to the console, I'll render it into a page. </p>
 
 <pre class="prettyprint">
-  Foursquare.Venues.explore("37.33", "-121.8903", "San Jose, Ca",  params,
+  
+  Foursquare.Users.getFriends("USER_ID", null,
     config.accessToken, function(error, data){
       
     if(error){
       res.send("An error was thrown: "+ error.message);
-
     }
     else{
-    /*Display the JSON object*/
-      console.log(JSON.stringifgy(data));
-    }</pre>
+      var context={};
+      context.results = JSON.stringify(data);
+      res.render('friends', context);
+    }
+  });
+</pre>
 
-    <p>Now that we have received the JSON object, we need to format it into a readable string. Copy and paste the JSON string from the console into the JSON Formmater and click on process. </p>
+    <p>Like we have done before, let's format the JSON response. </p>
 
-    <p>Below I have pasted a copy of the beggining bit of the response I received from making the call. The first venue suggested is Psycho Donuts</p>
-
-<pre class="prettyprint">
-"venue":{  
-          "id":"4c92850fd2e1a1430116cb26",
-          "name":"Psycho Donuts",
-          "contact":{  
-             "phone":"4085331023",
-             "formattedPhone":"(408) 533-1023"
-          },
-"categories":[  
-         {  
-            "id":"4bf58dd8d48988d148941735",
-            "name":"Donut Shop",
-            "pluralName":"Donut Shops",
-            "shortName":"Donuts",
-            "icon":{  
-               "prefix":"https://ss3.4sqi.net/img/categories_v2/food/donuts_",
-               "suffix":".png"
-            },
-            "primary":true
-         }
-      ],
-         {
-           "stats":{  
-                     "checkinsCount":4239,
-                     "usersCount":2498,
-                     "tipCount":44
-                  },
-          "url":"http://www.psycho-donuts.com",
-          "price":{  
-             "tier":2,
-             "message":"Moderate",
-             "currency":"$"
-          },
-</pre>   
-          <p>Our response returns a list of friends, along with some  details about each friend. Some of the details you will find in the response include the following: </p>
+    <p>Due to confidentiality, I won't be posting the list of my friends, as the list does return identifiable information. Our response returns a list of friends, along with some  details about each friend. Some of the details you will find in the response include the following: </p>
           <ul>
             <li>Friends' first name</li>
             <li>Friends' last name</li>
@@ -88,7 +46,7 @@
             <li>Friends' bio</li>
             <li>Friends'count of tips</li>
           </ul>
-          <p>One of my friends has left 117 tips. Of my 41 friends, I have 7 friends from Florida, 6 from Washington, and 5 from New York.  </a>.</p>
+          <p>One of my friends has left 117 tips! Of my 41 friends, I have 7 friends from Florida, 6 from Washington, and 5 from New York. </p>
 
 
 
