user friends is complete

--- a/sub/test/views/user-friends.handlebars
+++ b/sub/test/views/user-friends.handlebars
@@ -1,9 +1,11 @@
 <div class="container">
     <div class="jumbotron">
-        <h1>Foursquare API</h1>
-        <p>Feeling a bit stalkerish.</p>
+        <h1>How-To: Foursquare API</h1>
+        <p>Let's get details about a user's friends and perhaps feel a bit stalkerish.</p>
     </div>
     <div class="content">
+      <p>In this section, we will be using the following foursquare node module library function to make our GET request to the API:</p>
+      <code>getFriends(userId, params, accessToken, callback)</code>
         <div class="page-header">
             <h1>User's Friends</h1>
         </div>
