--- a/sub/test/views/index.handlebars
+++ b/sub/test/views/index.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="jumbotron">
-		<h1>Foursquare API</h1>
+		<h1>How-To: Foursquare API</h1>
 		<p>Access Data from the Foursquare API with Node</p>
 	</div>
 
@@ -12,6 +12,6 @@
 	<div class="content">
 		<p>Welcome to my guide on accessing the Foursquare API. If you’re not familiar with Foursquare, it is a technology company behind two of my favorite mobile apps: Foursquare and Swarm. I typically use the Foursquare application when I travel to find recommendations of venues I should visit or places I should go to grab a bite. The value provided by Swarm, on the other hand, is what initially prompted me to use the original Foursquare application. </p>
 		<p>When I first joined Foursquare in early 2010, I really liked the aspect of checking into places and sharing my location with my friends, but the gamification aspects behind earning points, and getting badges really made the location sharing aspect more fun. Local stores would even give discounts to the Mayor, or person who had the most check-ins at that location. While the aforementioned merchant side is readily available in the Foursquare API, this guide will be primarily focus on their core API features like getting information on venues and getting user data. </p>
-		<p>This guide will delve into getting data pertaining to the features I like most from Foursquare. We will examine searching for venues by categories like food or outdoor activities, trending venues and even narrowing venues down by location. We will also look at user check-in history, user badges, and user friends. For each call we make to the API, I’ll review the purpose of the call, the types of parameters the call takes, and go into the details of the response we receive from the Foursquare API.</p>
-		<pTo facilitate the way we request information from Foursquare, we will be using a Node module for the Foursquare API. The data received from the API will be JSON objects, which we will need to parse in order to make sense of the details the objects contain.  I’ll guide you through each step of the process to make it a seamless experience. Most of the code examples will be in JavaScript using various node modules.  ></p>
+		<p>This guide will delve into getting data pertaining to the features I like most from Foursquare. We will examine searching for venues by categories or query, exploring for recommended venues and even narrowing venues down by location. We will also look at a user's check-in history, user's tips, and user's friends. For each call we make to the API, I’ll review the purpose of the call, the types of parameters the call takes, and go into the details of the response we receive from the Foursquare API.</p>
+		<p>To facilitate the way we request information from Foursquare, we will be using a Node module for the Foursquare API. The data received from the API will be JSON objects, which we will need to parse in order to make sense of the details the objects contain. In addition to using the Foursquare node module, I will also be using the Request module when making direct requests to the API. Please note, that all of the requests we make will be of GET method as we will be requesting data from a specified source. With this guide, I will provide guidance pertaining to the Foursquare API and the Foursquare node module.</p>
 	</div>
