--- a/sub/test/views/venues-search.handlebars
+++ b/sub/test/views/venues-search.handlebars
@@ -1,7 +1,7 @@
 
 <div class="container">
     <div class="jumbotron">
-        <h1>Foursquare API</h1>
+        <h1>How-To: Foursquare API</h1>
         <p>Let's search for venues with a userless acess call</p>
     </div>
     <div class="content">
@@ -10,7 +10,7 @@
         </div>
 
         <div class="content">
-            <p>I often use the explore feature on Foursquare when I'm interested in finding popular venues or would like recommendations on where to go for certain types of venues like coffee, shopping, arts, etc. This is a great feature if you’re visiting a location and want to know where the locals go.</p>
+            <p>I often use the search feature on Foursquare when I'm interested in finding something specific. Perhaps, I'm looking for donuts, or pizza, or maybe have a craving for flan. Using the search feature allows us to narrow down the results based on our interest.</p>
 
             <p>If we were to make a direct call to the API without using the Node module, we would need to have our request directed to the following URL:</p>
             <pre class="prettyprint">
