Completed explore page

--- a/sub/test/views/venues-explore.handlebars
+++ b/sub/test/views/venues-explore.handlebars
@@ -1,10 +1,12 @@
 
 <div class="container">
     <div class="jumbotron">
-        <h1>Foursquare API</h1>
-        <p>Let's explore popular venues</p>
+        <h1>How-To: Foursquare API</h1>
+        <p>Let's explore popular venues.</p>
     </div>
     <div class="content">
+      <p>In this section, we will the following foursquare node module library function to make our GET request to the API:</p>
+      <code>explore(lat, lng, near, params, accessToken, callback)</code>
         <div class="page-header">
             <h1>Explore Venues</h1>
         </div>
